miltitenancy/network-exception.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
   name: network-exception
spec:
   podSelector:
      matchLabels:
        deployment: app-share
   ingress:
   - from:
     - namespaceSelector:
         matchLabels:
           name : test
       podSelector:
         matchLabels:
           run: ubi8
         ports:
           - port: 80
             protocol: TCP
